# radicalfield

./: 404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docs/: index.md  quadraticelement2.md  quadraticint2.md  quadraticrational2.md  sumofsqrts.md
quadraticelement2/: index.html
quadraticint2/: index.html
quadraticrational2/: index.html
radicalfield/: __init__.py  _pyquadraticelement2.py  _quadraticelement2module.c  _util.py  quadraticelement2.py  quadraticint2.py  quadraticrational2.py  sumofsqrts.py
search/: search_index.json
sumofsqrts/: index.html
tests/: test_quadraticelement2.py  test_quadraticint2.py  test_quadraticrational2.py  test_sumofsqrts.py
