[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radicalfield"
version = "2.0"
description = "Library for linear combinations of radicals."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
  {name="Sebastian Gössl", email="goessl@student.tugraz.at"}
]
dependencies = [
  "sympy"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Homepage = "https://github.com/goessl/radicalfield"
Documentation = "https://goessl.github.io/radicalfield"
Repository = "https://github.com/goessl/radicalfield.git"

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
include = ["radicalfield", "LICENSE", "README.md"]

[tool.hatch.build.targets.sdist]
include = ["radicalfield", "tests",
  "mkdocs.yml", "docs",
  "pyproject.toml", "README.md", "LICENSE"]
